--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
+aiogram~=3.15.0
+asyncio~=3.4.3
+requests~=2.31.0
+beautifulsoup4~=4.12.3
 pytesseract~=0.3.13
+opencv-python~=4.10.0.84
+levenshtein~=0.26.1
 Pillow~=10.1.0
